Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36542

QML plugin registration isn't thread-safe

    XMLWordPrintable

Details

    • 80fdecb3a548f1afbb3000ef62fed6d3f942f7ea

    Description

      In qqmlimport.cpp we frequently access the global qmlEnginePluginsWithRegisteredTypes(). That's a Q_GLOBAL_STATIC, so its retrieval is actually thread-safe. However, when we call methods on it we still have to protect it from concurrent access. As it stands, when starting multiple QML engines in parallel you can easily crash the application by concurrently importing things.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes