Make QML import thread safe.

Protect the common qmlEnginePluginsWithRegisteredTypes by a mutex.

Task-number: QTBUG-36542
Change-Id: Ia3c731f030b778d862239486cc6c1bfa441503e6
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>